Fix weird scrollbar bug. Thanks @relrod.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -204,7 +204,7 @@ i[class^="icon-"] {
 
 #searchbar {
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 #searchbar form > * {
